Suppress warning of auto generate file

--- a/src/jsMain/resources/index.html
+++ b/src/jsMain/resources/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <div id="root"></div>
+<!--suppress HtmlUnknownTarget -->
 <script src="blendthink.github.io.js"></script>
 </body>
 </html>
