--- a/src/jsMain/resources/index.html
+++ b/src/jsMain/resources/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>blendthink</title>
+    <script defer src="https://use.fontawesome.com/releases/v5.15.1/js/all.js"></script>
 </head>
 <body>
 <div id="root"></div>
