--- a/src/jsMain/resources/index.html
+++ b/src/jsMain/resources/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/x-icon" href="favicon.ico"/>
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png"/>
     <title>blendthink</title>
     <script defer src="https://use.fontawesome.com/releases/v5.15.1/js/all.js"></script>
 </head>
