add description meta

--- a/src/jsMain/resources/index.html
+++ b/src/jsMain/resources/index.html
@@ -6,7 +6,10 @@
 
     <link rel="icon" type="image/x-icon" href="favicon.ico"/>
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png"/>
+
     <title>blendthink</title>
+    <meta name="description" content="Portfolio site of blendthink.">
+
     <script defer src="https://use.fontawesome.com/releases/v5.15.1/js/all.js"></script>
 </head>
 <body>
