add keywords meta

--- a/src/jsMain/resources/index.html
+++ b/src/jsMain/resources/index.html
@@ -9,6 +9,7 @@
 
     <title>blendthink</title>
     <meta name="description" content="Portfolio site of blendthink.">
+    <meta name="keywords" content="blendthink,portfolio">
 
     <script defer src="https://use.fontawesome.com/releases/v5.15.1/js/all.js"></script>
 </head>
