--- a/src/jsMain/resources/index.html
+++ b/src/jsMain/resources/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link rel="icon" type="image/x-icon" href="favicon.ico"/>
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png"/>
@@ -12,9 +12,9 @@
     <meta name="keywords" content="blendthink,portfolio">
 
     <script defer src="https://use.fontawesome.com/releases/v5.15.1/js/all.js"></script>
+    <link href="https://unpkg.com/ress/dist/ress.min.css" rel="stylesheet">
 </head>
 <body>
-<div id="root"></div>
 <!--suppress HtmlUnknownTarget -->
 <script src="blendthink.github.io.js"></script>
 </body>
