--- a/src/jsMain/resources/index.html
+++ b/src/jsMain/resources/index.html
@@ -13,8 +13,12 @@
 
     <script defer src="https://use.fontawesome.com/releases/v6.1.1/js/all.js"></script>
     <link href="https://unpkg.com/ress/dist/ress.min.css" rel="stylesheet">
+    <script src="three.js"></script>
+    <script src="index.js"></script>
 </head>
 <body>
+<canvas id="myCanvas" style="position: fixed; width: 100vw; height: 100vh"></canvas>
+<div id="root"></div>
 <!--suppress HtmlUnknownTarget -->
 <script src="blendthink.github.io.js"></script>
 </body>
